# DCGen

./: .gitignore  README.md  calculate_metrics.py  pyproject.toml  requirements.txt.old  setup.py
.github/: README.md
Tool/: app.py
Tool/templates/: interface.html
data/original/: 0.html  1.html  10.html  100.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  210.html  2101.html  2105.html  2119.html  2123.html  2125.html  2151.html  2175.html  218.html  22.html  23.html  24.html  242.html  247.html  25.html  26.html  260.html  263.html  27.html  276.html  277.html  28.html  29.html  299.html  (+71 more)
metrics/: requirements.txt
metrics/Design2Code/data_utils/: dedup_post_gen.py
metrics/Design2Code/metrics/: multi_processing_eval.py  ocr_free_utils.py  res_dict_testset_final.json  visual_score.py
src/DCGen/: __init__.py  experiments.py  utils.py
