[project]
name = "dcgen"
version = "0.1.0"
description = "Unofficial pip-installable version of DCGen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.0.3",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "levenshtein>=0.27.1",
    "lxml>=5.2.2",
    "matplotlib>=3.10.1",
    "openai>=1.13.3",
    "pandas>=2.2.1",
    "pillow>=10.2.0",
    "pillow-avif-plugin>=1.4.3",
    "pyqt5>=5.15.11",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "selenium>=4.18.1",
    "setuptools>=80.0.1",
    "tqdm>=4.66.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]
