[project]
name = "dcgen"
version = "0.1.0"
description = "Unofficial pip-installable version of DCGen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-genai>=1.12.1",
    "matplotlib>=3.10.1",
    "openai>=1.13.3",
    "pandas>=2.2.1",
    "pillow>=10.2.0",
    "requests>=2.32.3",
    "selenium>=4.18.1",
    "setuptools>=80.0.1",
    "tqdm>=4.66.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
# disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501", "W293"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.mccabe]
max-complexity = 5
