[project]
name = "dcgen"
version = "0.1.0"
description = "Unofficial pip-installable version of DCGen"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "google-genai>=1.13.0",
    "matplotlib>=3.10.1",
    "openai>=1.76.2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
    "setuptools>=80.1.0",
]

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
# disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501", "W293"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.mccabe]
max-complexity = 5

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
DCGen = ["py.typed"]
